--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
+/* Movie Card Styles */
+.movie-card {
+  width: 300px; /* Adjust the width as per your preference */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #222;
+  padding: 20px;
+  border-radius: 8px;
+  margin: 10px;
+}
+
+.movie-card h2 {
+  font-size: 18px;
+  margin: 0;
+  color: #fff;
+  margin-bottom: 10px;
   text-align: center;
+  word-wrap: break-word;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.movie-card p {
+  font-size: 14px;
+  color: #ccc;
+  margin-bottom: 5px;
+  text-align: center;
+  word-wrap: break-word;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Flexbox Styles */
+.movie-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.movie-details-card {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 20px;
+  margin: 10px;
+  width: 100%;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.movie-details-card h2 {
+  font-size: 2rem;
+  margin-bottom: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.movie-details-card p {
+  margin-bottom: 5px;
+}
+
+.movie-details-card button {
+  margin-top: 10px;
+}
+
+.navbar {
+  text-decoration: none;
 }
