--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   padding: 20px;
   border-radius: 8px;
   margin: 10px;
+  text-decoration: none;
 }
 
 .movie-card h2 {
@@ -27,7 +28,15 @@
   word-wrap: break-word;
 }
 
-/* Flexbox Styles */
+.movie-card Link{
+  text-decoration: none;
+  color: #333;
+}
+
+.movie-card Link:hover {
+  text-decoration: none;
+}
+
 .movie-container {
   display: flex;
   flex-wrap: wrap;
@@ -62,4 +71,96 @@
 
 .navbar {
   text-decoration: none;
+}
+/* styles.css */
+
+.form-container {
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f2f2f2;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.form-container label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.form-container .form-row {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.form-container .form-row label {
+  flex-basis: 30%;
+  flex-shrink: 0;
+}
+
+.form-container .form-row input {
+  flex-grow: 1;
+  padding: 10px;
+  margin-left: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.form-container textarea {
+  width: 100%;
+  height: 150px;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.form-container button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.form-container button:hover {
+  background-color: #0056b3;
+}
+.navbar {
+  background-color: #f8f9fa;
+  color: #333;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+}
+
+.navbar-brand {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.navbar-menu {
+  list-style-type: none;
+  display: flex;
+  gap: 1rem;
+}
+
+.navbar-item {
+  padding: 0.5rem;
+}
+
+.navbar-link {
+  color: #333;
+  text-decoration: none;
+}
+
+.navbar-link:hover {
+  text-decoration: underline;
 }
