--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
-/* Movie Card Styles */
+body{
+  background-color: rgb(107, 14, 14);
+}
 .movie-card {
   width: 300px; /* Adjust the width as per your preference */
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #222;
+  background-color: rgb(107, 14, 14);
   padding: 20px;
   border-radius: 8px;
   margin: 10px;
@@ -54,6 +56,7 @@
   margin: 10px;
   width: 100%;
   text-align: center;
+  
 }
 
 .movie-details-card h2 {
@@ -67,12 +70,13 @@
 
 .movie-details-card button {
   margin-top: 10px;
+  margin:10px;
+  border: none;
 }
 
 .navbar {
   text-decoration: none;
 }
-/* styles.css */
 
 .form-container {
   max-width: 500px;
@@ -121,8 +125,8 @@
 
 .form-container button {
   padding: 10px 20px;
-  background-color: #007bff;
-  color: #fff;
+  
+  color:black;
   border: none;
   border-radius: 4px;
   font-size: 16px;
@@ -130,11 +134,12 @@
 }
 
 .form-container button:hover {
-  background-color: #0056b3;
+  background-color:black;
+  color: white;
 }
 .navbar {
-  background-color: #f8f9fa;
-  color: #333;
+  background-color: rgb(107, 14, 14);
+  color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -144,23 +149,28 @@
 .navbar-brand {
   font-size: 1.5rem;
   font-weight: bold;
+  color:grey;
 }
 
 .navbar-menu {
+  
   list-style-type: none;
   display: flex;
   gap: 1rem;
 }
 
 .navbar-item {
+  
   padding: 0.5rem;
 }
 
 .navbar-link {
-  color: #333;
+  color:grey;
+  
   text-decoration: none;
 }
 
 .navbar-link:hover {
+  color:grey;
   text-decoration: underline;
 }
